[workspace]
resolver = "2"
members = [
    "utils/state",

    "cs2-schema/definition",
    "cs2-schema/cutl",
    "cs2-schema/generated",

    "kernel/interface",
    "kernel/shared",
    "kernel/um-driver-impl",

    "radar/client",
    "radar/client-standalone",
    "radar/server",
    "radar/server-standalone",
    "radar/shared",

    "cs2",
    "overlay",
    "controller",
]

[profile.dev]
incremental = true

# build the build scripts and proc-macros in release to speedup the compilation process
[profile.dev.build-override]
opt-level = 3
codegen-units = 256
debug = false

[profile.release]
panic = "abort"
lto = true
