[package]
name = "controller"
version = "0.4.0"
edition = "2021"

[dependencies]
cs2 = { path = "../cs2" }
cs2-schema-generated = { path = "../cs2-schema/generated" }
cs2-schema-declaration = { path = "../cs2-schema/declaration" }
valthrun-kernel-interface = { path = "../kernel/interface" }
overlay = { path = "../overlay" }
valthrun-toolkit = { path = "../valthrun-toolkit" }
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
imgui = { version = "0.11", features = ["tables-api"] }
obfstr = "0.4.3"
nalgebra = "0.32.3"
mint = "0.5.9"
clap = { version = "4.3.19", features = ["derive"] }
serde_yaml = "0.9.25"
windows = { version = "0.48.0", features = [
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_Foundation",
] }

chrono = "0.4.26"
rand = "0.8.5"
libloading = "0.7.4" # Same version as used by ash

[build-dependencies]
winres = "0.1"
chrono = "0.4.26"
