[package]
name = "controller"
version = "0.4.5"
edition = "2021"

[dependencies]
cs2 = { path = "../cs2" }
cs2-schema-generated = { path = "../cs2-schema/generated" }
cs2-schema-declaration = { path = "../cs2-schema/declaration" }
valthrun-kernel-interface = { path = "../kernel/interface" }
overlay = { path = "../overlay" }
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
imgui = { version = "0.11", features = ["tables-api"] }
obfstr = "0.4.3"
nalgebra = "0.32.3"
mint = "0.5.9"
clap = { version = "4.3.19", features = ["derive"] }
serde_yaml = "0.9.25"
windows = { version = "0.53.0", features = [
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_System_ApplicationInstallationAndServicing",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

chrono = "0.4.26"
rand = "0.8.5"
libloading = "0.7.4"
utils-state = { version = "0.1.0", path = "../utils/state" }
url = "2.5.0"
tokio = { version = "1.36.0", features = ["full"] }
radar-client = { version = "0.1.0", path = "../radar/client" }
serde_with = "3.8.3"
rfd = "0.14.1"
winapi = { version = "0.3", features = ["fileapi", "handleapi", "ioapiset", "synchapi", "errhandlingapi"] }

[build-dependencies]
winres = "0.1"
chrono = "0.4.26"
