[package]
name = "cs2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
obfstr = { workspace = true }
valthrun-kernel-interface = { path = "../kernel/interface" }
log = { workspace = true }
serde_json = "1.0.104"
nalgebra = { workspace = true }
cs2-schema-cutl = { path = "../cs2-schema/cutl" }
cs2-schema-generated = { path = "../cs2-schema/generated" }
utils-state = { version = "0.1.0", path = "../utils/state" }
raw_struct = { workspace = true }
env_logger = { workspace = true }
cs2-schema-definition = { version = "0.1.0", path = "../cs2-schema/definition" }
