[package]
name = "cs2"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
obfstr = { workspace = true }
log = { workspace = true }
serde_json = "1.0.104"
nalgebra = { workspace = true }
cs2-schema-cutl = { path = "../cs2-schema/cutl" }
cs2-schema-generated = { path = "../cs2-schema/generated" }
utils-state = { path = "../utils/state" }
raw_struct = { workspace = true }
env_logger = { workspace = true }
cs2-schema-definition = { path = "../cs2-schema/definition" }
valthrun-driver-interface = { path = "../driver/interface" }
