[package]
name = "valthrun-bhop"
version = "0.1.0"
edition = "2021"

[dependencies]
obfstr = "0.4.3"
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"

windows = { version = "0.48.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }

cs2 = { path = "../cs2" } 
cs2-schema-generated = { path = "../cs2-schema/generated" }
cs2-schema-declaration = { path = "../cs2-schema/declaration" }
cs2-schema-cutl = { path = "../cs2-schema/cutl" }
valthrun-kernel-interface = { path = "../kernel/interface"}
