[package]
name = "valthrun-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
obfstr = "0.4.3"
log = "0.4.19"
imgui = { version = "0.11", features = ["tables-api"] }
mint = "0.5.9"
nalgebra = "0.32.3"
serde = { version = "1.0.178", features = ["derive"] }
serde_yaml = "0.9.25"
windows = { version = "0.48.0", features = [
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_Foundation",
] }

cs2 = { path = "../cs2" }
cs2-schema-generated = { path = "../cs2-schema/generated" }
cs2-schema-declaration = { path = "../cs2-schema/declaration" }