[package]
name = "valthrun-web-radar"
version = "0.1.0"
edition = "2021"

[dependencies]
obfstr = "0.4.3"
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
nalgebra = "0.32.3"
mint = "0.5.9"
actix = "0.13.1"
actix-web = { version = "4.4.0", features = ["rustls-0_21"]}
actix-web-actors = "4.2.0"
actix-rt = "2.9.0"
actix-files = "0.6.2"
once_cell = "1.18.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread"]}

windows = { version = "0.48.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }

cs2 = { path = "../cs2" } 
cs2-schema-generated = { path = "../cs2-schema/generated" }
cs2-schema-declaration = { path = "../cs2-schema/declaration" }
cs2-schema-cutl = { path = "../cs2-schema/cutl" }
valthrun-kernel-interface = { path = "../kernel/interface"}
valthrun-toolkit = { path = "../valthrun-toolkit"}

[build-dependencies]
winres = "0.1"
chrono = "0.4.26"
