[package]
name = "cs2-schema-dumper"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.21", features = ["derive"] }
cs2 = { version = "0.5.0", path = "../../cs2" }
env_logger.workspace = true
log.workspace = true
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.133"
utils-state = { version = "0.1.0", path = "../../utils/state" }
