[package]
name = "valthrun-driver-kernel"
version = "0.1.0"
edition = "2021"
description = "Valthrun Kernel Driver memory interface implementation"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
] }
valthrun-driver-protocol = { path = "../protocol" }
log = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
lazy_static = "1.5.0"
obfstr.workspace = true
