[package]
name = "valthrun-driver-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
] }
valthrun-driver-protocol = { path = "../protocol" }
log = { workspace = true }
thiserror = "1.0.44"
libloading = "0.8.5"
obfstr.workspace = true

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
rand = "0.8.5"
