[package]
name = "valthrun-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
anyhow = "1.0.72"
cc = "1.0.79"
winreg = "0.50.0"

[dependencies]
anyhow = { version = "1.0", default-features = false }
log = "0.4.19"
obfstr = "0.4.3"
# static_init = { version = "1.0.3", features = ["spin_loop"] }
valthrun-driver-shared = { path = "../shared" }
