[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
anyhow = "1.0.72"
cc = "1.0.79"
winreg = "0.50.0" 

[dependencies]
log = "0.4.19"
anyhow = { version = "1.0", default-features = false }
modular-bitfield = "0.11.2"
obfstr = "0.4.3"
valthrun-driver-shared = { path = "../shared" }

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
]
