[package]
name = "valthrun-um-driver"
version = "0.1.0"
edition = "2021"
description = "Valthrun driver user mode interface implementation"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
valthrun-driver-shared = { path = "../shared" }
log = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
lazy_static = "1.5.0"
