[package]
name = "radar-client-standalone"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4.8", features = ["derive"] }
cs2 = { path = "../../cs2" }
env_logger = { workspace = true }
log = { workspace = true }
radar-client = { path = "../client" }
radar-shared = { path = "../shared" }
tokio = { version = "1.34.0", features = ["io-util", "rt-multi-thread", "net"] }
url = "2.5.0"
utils-state = { path = "../../utils/state" }
