[package]
name = "radar-server-standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4.8", features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
radar-server = { version = "0.1.0", path = "../server" }
tokio = { version = "1.34.0", features = ["io-util", "rt-multi-thread", "net"] }
