[package]
name = "radar-server-standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
radar-server = { version = "0.1.0", path = "../server" }
tokio = { version = "1.34.0", features = ["io-util", "rt-multi-thread", "net"] }
