[package]
name = "radar-server-standalone"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4.8", features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
radar-server = { path = "../server" }
tokio = { version = "1.34.0", features = ["io-util", "rt-multi-thread", "net"] }
