[package]
name = "radar-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = "1.3.3"
env_logger = { workspace = true }
futures = "0.3.29"
futures-util = "0.3.29"
log = { workspace = true }
radar-shared = { path = "../shared" }
rand = "0.8.5"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = [
    "rt",
    "time",
    "macros",
    "sync",
    "signal",
    "rt-multi-thread",
    "net",
] }
tokio-bincode = "0.1.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
warp = "0.3.6"

[features]
static-bundle = []
