[package]
name = "radar-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
futures = "0.3.29"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["io-util"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
